fix axis description and add highlights to the role description

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,3 +43,17 @@ a:hover {
     font-size: 1.2rem;
     font-style: italic;
 }
+
+.level {
+    background: #FFEC3D;
+    border-radius: 4px;
+    color: #333;
+    padding: 0.2rem;
+}
+
+.axis {
+    background: #fff;
+    border-radius: 4px;
+    color: #333;
+    padding: 0.2rem;
+}
